fix: added a overflow: hidden; atribute to the body, cause it has some troubles with the animations coming from the side

--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,7 @@
 
   body {
     font-family: var(--font-family-host);
+    overflow: hidden;
   }
 }
 
